disponibilização de atualizações